--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -13,6 +13,8 @@
    justify-content: space-between;
 
    font-family: 'Poppins';
+
+   box-shadow: 0 0 30px black;
 }
 
 .header-dark {
@@ -31,6 +33,8 @@
    justify-content: space-between;
 
    font-family: 'Poppins';
+
+   box-shadow: 0 0 30px black;
 }
 
 .header-icon-elements {
