--- a/src/components/DropmMenu/dropMenu.module.css
+++ b/src/components/DropmMenu/dropMenu.module.css
@@ -1,3 +1,7 @@
+.underline {
+   border-bottom: 1px solid white;
+}
+
 .dropmenu-close {
    width: 200px;
    height: 550px;
@@ -101,7 +105,7 @@
    top: 0;
    left: 0;
 
-   width: 200px;
+   width: 350px;
    height: 550px;
 
    border: 1px solid black;
@@ -112,4 +116,41 @@
    border-bottom-right-radius: 25px;
 
    animation: open .5s ease-in-out;
+}
+
+.categories {
+   display: flex;
+   flex-direction: column;
+
+   /* height: 500px; */
+
+   border-bottom-right-radius: 25px;
+}
+
+.drop-info-close {
+   width: 200px;
+   height: 200px;
+
+   position: absolute;
+   top: 0;
+   left: 200px;
+
+   border: 1px solid black;
+
+   display: none;
+}
+
+.drop-info-open {
+   width: 200px;
+   height: 200px;
+
+   position: fixed;
+   top: 0;
+   left: 350px;
+
+   border: 1px solid black;
+
+   background-color: #333;
+
+   border-bottom-right-radius: 25px;
 }
