--- a/src/components/DropmMenu/dropMenu.module.css
+++ b/src/components/DropmMenu/dropMenu.module.css
@@ -125,6 +125,29 @@
    /* height: 500px; */
 
    border-bottom-right-radius: 25px;
+
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+
+  border-radius: 25px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
 
 .drop-info-close {
