add search, add count of meals

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,49 @@
 
   font-family: 'Poppins';
 }
+
+.container {
+  max-width: 100vw;
+}
+
+/* 2xl */
+/* @media (max-width: 1536px) {
+  .container {
+    max-width: 1280px;
+  }
+} */
+
+/* xl */
+/* @media (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+} */
+
+/* lg */
+/* @media (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+  }
+} */
+
+/* md */
+/* @media (max-width: 768px) {
+  .container {
+    max-width: 640px;
+  }
+} */
+
+/* sm */
+/* @media (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
+} */
+
+/* xs */
+/* @media (max-width: 475px) {
+  .container {
+    width: 100%;
+  }
+} */
