--- a/src/components/Content/content.module.css
+++ b/src/components/Content/content.module.css
@@ -92,6 +92,7 @@
 }
 
 .content-element-meals {
+   /* position: relative; */
    display: flex;
    justify-content: center;
    align-items: center;
@@ -116,6 +117,8 @@
 }
 
 .content-meals-price-choose {
+   /* position: absolute; */
+
    padding: 5px 10px;
    background-color: orange;
 
@@ -159,6 +162,10 @@
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .content-meals-sale-img {
@@ -172,4 +179,18 @@
    display: flex;
    align-items: center;
    justify-content: center;
+}
+
+.handle-size-content-text-meals {
+   font-size: 12px;
+   overflow-y: hidden;
+}
+
+.choosed-meal {
+   border: 5px solid green;
+   box-shadow: 0 0 15px green;
+}
+
+.handle-scrollbar-content-text-meals {
+   overflow: hidden;
 }
