--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -1,6 +1,6 @@
 .search {
    border: none;
-   border-bottom: 1px solid black;
+   /* border-bottom: 1px solid black; */
 
    background: transparent;
 }
