--- a/src/index.css
+++ b/src/index.css
@@ -10,48 +10,529 @@
   font-family: 'Poppins';
 }
 
+html {
+  height: -webkit-fill-available-;
+}
+
 .container {
   max-width: 100vw;
+  height: -webkit-fill-available-;
+}
+
+@media (max-width: 2575px) {
+  .container {
+    max-width: 2575px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 500px 500px 500px 500px;
+    gap: 40px;
+  }
+
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 500px 500px 500px 500px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 300px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 400px;
+  }
+}
+
+@media (max-width: 1920px) {
+  .container {
+    max-width: 1920px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 400px 400px 400px 400px;
+    gap: 40px;
+  }
+
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 400px 400px 400px 400px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 250px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
 }
 
 /* 2xl */
-/* @media (max-width: 1536px) {
+@media (max-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 300px 300px 300px 300px;
+    gap: 35px;
+  }
+
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 300px 300px 300px 300px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 200px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 300px;
+  }
+}
+
+/* xl */
+@media (max-width: 1280px) {
   .container {
     max-width: 1280px;
   }
-} */
 
-/* xl */
-/* @media (max-width: 1280px) {
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 350px 350px 350px;
+    gap: 35px;
+  }
+
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 350px 350px 350px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 250px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+}
+
+/* lg */
+@media (max-width: 1024px) {
   .container {
     max-width: 1024px;
   }
-} */
 
-/* lg */
-/* @media (max-width: 1024px) {
+  /* ._content-dark_1x3im_45 {
+    overflow-y: scroll hidden;
+  } */
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 330px 330px 330px;
+    gap: 10px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 230px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+
+  /*Убрать полосу прокрутки у элемента*/
+  .element::-webkit-scrollbar {
+    width: 0;
+  }
+
+  /*Убрать полосу прокрутки для всей страницы*/
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+
+  ._dropmenu-open_15u1t_29 {
+    height: 300px;
+  }
+  
+  ._dropmenu-categories-open_15u1t_205 {
+    height: 300px;
+    width: 350px;
+    border: 1px solid black;
+  }
+
+  ._icon-menu_15u1t_165 {
+    margin-right: 20px;
+  }
+
+  .nf-first-element {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 912px) {
+  .container {
+    max-width: 912px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 230px 230px 230px;
+    gap: 40px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 210px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+}
+
+@media (max-width: 820px) {
+  .container {
+    max-width: 820px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 230px 230px 230px;
+    gap: 30px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 230px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+}
+
+/* md */
+@media (max-width: 768px) {
   .container {
     max-width: 768px;
   }
-} */
 
-/* md */
-/* @media (max-width: 768px) {
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 300px 300px;
+    gap: 50px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 250px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+
+  ._header-dark_qzpw0_43 {
+    justify-content: space-around;
+  }
+}
+
+/* sm */
+@media (max-width: 640px) {
   .container {
     max-width: 640px;
   }
-} */
 
-/* sm */
-/* @media (max-width: 640px) {
-  .container {
-    max-width: 475px;
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 300px 300px;
+    gap: 5px;
   }
-} */
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 200px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+
+  ._handle-size-content-text-meals_1x3im_367 {
+    width: 100px;
+  }
+}
 
 /* xs */
-/* @media (max-width: 475px) {
+@media (max-width: 475px) {
   .container {
-    width: 100%;
+    width: 475px;
   }
-} */
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 250px 250px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 150px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+}
+
+@media (max-width: 430px) {
+  .container {
+    width: 430px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 250px 250px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 150px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+
+  ._header-dark_qzpw0_43 {
+    justify-content: flex-start;
+  }
+
+  ._search_109ui_1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  ._search-dark_109ui_15 {
+    width: 80px;
+  }
+
+  ._header-icon-elements_qzpw0_83 {
+    margin: 0;
+    font-size: 10px;
+  }
+
+  ._header-toggle-dark_1hmpm_27 {
+    left: 85%;
+  }
+
+  ._search-dark_ro6i5_15 {
+    width: 90px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 425px) {
+  .container {
+    width: 425px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 250px 250px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 150px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+
+  ._header-dark_qzpw0_43 {
+    justify-content: flex-start;
+  }
+
+  ._search_109ui_1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  ._search-dark_109ui_15 {
+    width: 80px;
+  }
+
+  ._header-icon-elements_qzpw0_83 {
+    margin: 0;
+    font-size: 10px;
+  }
+
+  ._header-toggle-dark_1hmpm_27 {
+    left: 85%;
+  }
+
+  ._search-dark_ro6i5_15 {
+    width: 90px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 414px) {
+  .container {
+    width: 414px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 200px 200px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 150px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+}
+
+@media (max-width: 400px) {
+  .container {
+    width: 400px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 210px 210px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 150px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+}
+
+@media (max-width: 390px) {
+  .container {
+    width: 390px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 200px 200px;
+    gap: 0px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 140px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+
+  ._search-dark_ro6i5_15 {
+    width: 65px;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 375px) {
+  .container {
+    width: 375px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 200px 200px;
+    gap: 0px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 140px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+
+  ._search-dark_ro6i5_15 {
+    width: 70px;
+    margin-left: 10px;
+  }
+
+  ._dropmenu-categories-open_15u1t_205 {
+    height: 300px;
+    width: 320px;
+    border: 1px solid black;
+  }
+}
+
+@media (max-width: 360px) {
+  .container {
+    width: 360px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 190px 190px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 140px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 250px;
+  }
+
+  ._header-dark_qzpw0_43 {
+    justify-content: flex-start;
+  }
+
+  ._search_109ui_1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  ._search-dark_109ui_15 {
+    width: 80px;
+  }
+
+  ._header-icon-elements_qzpw0_83 {
+    margin: 0;
+    font-size: 10px;
+  }
+
+  ._header-toggle-dark_1hmpm_27 {
+    left: 85%;
+  }
+
+  ._header-toggle_1hmpm_27 {
+    left: 85%;
+  }
+
+  ._search-dark_ro6i5_15 {
+    width: 50px;
+    margin-left: 20px;
+  }
+
+  /* ._search_ro6i5_1 {
+    width: 50px;
+    margin-left: 20px;
+  } */
+}
+
+@media (max-width: 344px) {
+  .container {
+    width: 344px;
+  }
+
+  ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 300px;
+    gap: 5px;
+  }
+
+  ._content-meals-img-dark_1x3im_157 {
+    width: 250px;
+  }
+
+  ._content-element-meals_1x3im_187 {
+    height: 350px;
+  }
+}
