--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -114,6 +114,7 @@
    height: 20px;
 
    background: url('./sun.png');
+   background-color: orange;
    border-radius: 50%;
 
    border: none;
@@ -131,6 +132,7 @@
    height: 20px;
 
    background: url('./moon.png');
+   background-color: #333;
    border-radius: 50%;
 
    border: none;
