--- a/src/index.css
+++ b/src/index.css
@@ -199,6 +199,11 @@ html {
     gap: 10px;
   }
 
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 330px 330px 330px;
+    gap: 10px;
+  }
+
   ._content-meals-img-dark_1x3im_157 {
     width: 230px;
   }
@@ -248,6 +253,11 @@ html {
     gap: 40px;
   }
 
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 230px 230px 230px;
+    gap: 40px;
+  }
+
   ._content-meals-img-dark_1x3im_157 {
     width: 210px;
   }
@@ -263,6 +273,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 230px 230px 230px;
+    gap: 30px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 230px 230px 230px;
     gap: 30px;
   }
@@ -287,6 +302,11 @@ html {
     gap: 50px;
   }
 
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 300px 300px;
+    gap: 50px;
+  }
+
   ._content-meals-img-dark_1x3im_157 {
     width: 250px;
   }
@@ -307,6 +327,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 300px 300px;
+    gap: 5px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 300px 300px;
     gap: 5px;
   }
@@ -360,6 +385,11 @@ html {
     grid-template-columns: 250px 250px;
     gap: 5px;
   }
+  
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 250px 250px;
+    gap: 5px;
+  }
 
   ._content-meals-img-dark_1x3im_157 {
     width: 150px;
@@ -390,6 +420,11 @@ html {
     gap: 5px;
   }
 
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 250px 250px;
+    gap: 5px;
+  }
+
   ._content-meals-img-dark_1x3im_157 {
     width: 150px;
   }
@@ -399,6 +434,10 @@ html {
   }
 
   ._header-dark_qzpw0_43 {
+    justify-content: flex-start;
+  }
+
+  ._header_717b3_1 {
     justify-content: flex-start;
   }
 
@@ -434,6 +473,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 250px 250px;
+    gap: 5px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 250px 250px;
     gap: 5px;
   }
@@ -496,6 +540,11 @@ html {
     gap: 5px;
   }
 
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 200px 200px;
+    gap: 5px;
+  }
+
   ._content-meals-img-dark_1x3im_157 {
     width: 150px;
   }
@@ -511,6 +560,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 210px 210px;
+    gap: 5px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 210px 210px;
     gap: 5px;
   }
@@ -542,6 +596,11 @@ html {
     gap: 0px;
   }
 
+  ._content-meals_1x3im_63 {
+    grid-template-columns: 200px 200px;
+    gap: 0px;
+  }
+
   ._content-meals-img-dark_1x3im_157 {
     width: 140px;
   }
@@ -565,6 +624,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 200px 200px;
+    gap: 0px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 200px 200px;
     gap: 0px;
   }
@@ -595,6 +659,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 190px 190px;
+    gap: 5px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 190px 190px;
     gap: 5px;
   }
@@ -644,6 +713,11 @@ html {
   }
 
   ._content-meals-dark_1x3im_93 {
+    grid-template-columns: 300px;
+    gap: 5px;
+  }
+
+  ._content-meals_1x3im_63 {
     grid-template-columns: 300px;
     gap: 5px;
   }
